# local-dns-discovery

./: LICENSE  Readme.md  pyproject.toml
dns_discovery/: client.py  server.py
services/: client.service  client.timer  server.service
src/local_dns_discovery/: client.py  server.py
