[project]
name = "local-dns-discovery"
version = "0.0.1"
authors = [
  { name="Kiritow", email="kiritotrw@gmail.com" },
]
description = "Local DNS Discovery"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "cryptography>=36.0.1"
]

[project.urls]
"Homepage" = "https://github.com/kiritow/local-dns-discovery"
"Bug Tracker" = "https://github.com/kiritow/local-dns-discovery/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
local-dns-discovery-client = "dns_discovery.client:client_main"
local-dns-discovery-server = "dns_discovery.server:server_main"
